--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="app-header">
         <div class="container">
@@ -22,9 +24,13 @@
     <main class="container">
         <div class="actions-bar">
             <h2>Your Stores</h2>
-            <button id="provision-btn" class="btn btn-primary">
-                Provision New Store
-            </button>
+            <div style="display: flex; gap: 10px;">
+                <input type="text" id="store-name" placeholder="Store Name (Optional)"
+                    style="padding: 8px; border: 1px solid #ccc; border-radius: 4px;">
+                <button id="provision-btn" class="btn btn-primary">
+                    Provision New Store
+                </button>
+            </div>
         </div>
 
         <div id="stores-list" class="stores-grid">
@@ -37,4 +43,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
